<resources>
    <string name="app_name">MyApplication</string>
    <string name="choose_date_and_write_note">Choose date and write note</string>
    <string name="divided">/</string>
    <string name="selected_date">Selected Date: </string>
    <string name="empty" />
    <string name="new_line">\n</string>

    <string name="default_theme">Default Theme</string>
    <string name="orange_theme">Orange Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="add_to_back_stack_empty" />
    <string name="choose_a_theme">Choose\na Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_themes">Themes</string>
    <string name="action_exit">exit</string>
    <string name="action_delete_date">delete date</string>
    <string name="todo">TODO</string>
    <string name="toolbar_subtitle">AppNotes</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="finished">Finished</string>
    <string name="please_rate_the_app">Please, rate the app.</string>
    <string name="want_to_rate">Want to rate?</string>
    <string name="action_rate">rate</string>
    <string name="thanks">THANKS</string>
    <string name="add">add</string>
    <string name="clear">clear</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="change_sentiment">Change sentiment:</string>
    <string name="input_title">input title</string>
    <string name="input_description">input description</string>
    <string name="title_cardView">title</string>
    <string name="descriptionDate_cardView">DescriptionDate</string>
    <string name="description_cardView">Description</string>
    <string name="local">Local</string>
    <string name="sp">SP</string>
    <string name="gf">GF</string>
    <string name="input_title_note">Input title note</string>
    <string name="input_description_note">Input description note</string>
    <string name="description_channel">CHANNEL :: PUSH</string>
    <string name="get_the_rate">Get the rate!</string>
    <string name="dot_thanks">. Thanks!</string>
    <string name="rate_space">Rate\ </string>
</resources>