<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewDialogFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tableLayoutDialogFragmentChangePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/tableLayoutDialogFragmentChangePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogFragment">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDialogFragment1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDialogFragment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDialogFragment3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDialogFragment4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDialogFragment5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>