<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.settings.ThemeFragment">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_defaultTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_orangeTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_purpleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purple_theme" />

    </RadioGroup>

</LinearLayout>