<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/theme_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemeActivity">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_defaultTheme"
            style="@style/styleMyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_orangeTheme"
            style="@style/styleMyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButton_purpleTheme"
            style="@style/styleMyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purple_theme" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_goBackCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_calculator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtons"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>